argocd/media-server/tracearr/tracearr.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tracearr
spec:
  serviceName: tracearr
  replicas: 1
  selector:
    matchLabels:
      app: tracearr
  template:
    metadata:
      labels:
        app: tracearr
    spec:
      securityContext:
        runAsUser: 3000
        runAsGroup: 3000
        fsGroup: 3000
      containers:
        - name: tracearr
          image: harbor.yanello.net/ghcr/connorgallopo/tracearr:2.3.0@sha256:f1aba630ecd4771e11e1657aa771bbd25f94556fa557b8b7debd782d107f6518
          ports:
            - containerPort: 3000
              name: tracearr
          volumeMounts:
            - name: backup
              mountPath: /data/backup
          resources:
            requests:
              memory: "512Mi"
              cpu: "10m"
            limits:
              memory: "1Gi"
  volumeClaimTemplates:
    - metadata:
        name: backup
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-ssd-nfs
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: tracearr
spec:
  selector:
    app: tracearr
  ports:
    - port: 3000
      targetPort: 3000
      name: tracearr
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tracearr-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - tracearr.yanello.net
  rules:
    - backendRefs:
        - name: tracearr
          namespace: tracearr
          port: 3000
